compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/traitImpl/oneTrait.kt
// RUN_PIPELINE_TILL: BACKEND
interface T {
    fun getX() = 1
}

class C : T {
    <!ACCIDENTAL_OVERRIDE!>val x<!> = 1
}

/* GENERATED_FIR_TAGS: classDeclaration, functionDeclaration, integerLiteral, interfaceDeclaration, propertyDeclaration */
